--- a/assets/scss/abstracts/_reset.scss
+++ b/assets/scss/abstracts/_reset.scss
@@ -12,6 +12,7 @@ html {
     scroll-behavior: smooth;
     width: 100%;
     overflow-x: hidden;
+    overscroll-behavior: none;
     margin: 0;
 }
 
